fix: remove header blur effect and collapse button shadow

--- a/src/_blocks.scss
+++ b/src/_blocks.scss
@@ -53,19 +53,14 @@ a:hover > .bullet-container .bullet {
   color: var(--ct-block-arrow-color);
 }
 
-.block-control:hover svg {
-  filter: drop-shadow(2px 4px 6px black);
-}
-
 .block-control .rotating-arrow {
   display: block;
   border-radius: 50%;
-  background-color: var(--ls-primary-background-color);
+  background-color: var(--ls-tertiary-background-color);
   width: 1rem;
   height: 1rem;
   margin-left: 2px;
   margin-top: 2px;
-  box-shadow: 0 0 4px 2px var(--ls-primary-background-color);
 }
 
 .block-control .rotating-arrow > svg {
