--- a/src/_root.scss
+++ b/src/_root.scss
@@ -35,28 +35,6 @@
   }
 }
 
-@supports (
-  (-webkit-backdrop-filter: blur(20px)) or (backdrop-filter: blur(20px))
-) {
-  .cp__header,
-  .cp__right-sidebar-topbar,
-  .sidebar-item.content > div > div:first-of-type {
-    -webkit-backdrop-filter: blur(20px);
-    backdrop-filter: blur(20px);
-    background-color: transparent;
-  }
-}
-
-@supports not (
-  (-webkit-backdrop-filter: blur(20px)) or (backdrop-filter: blur(20px))
-) {
-  .cp__header,
-  .cp__right-sidebar-topbar,
-  .sidebar-item.content > div > div:first-of-type {
-    background: var(--ct-header-bg-color);
-  }
-}
-
 :not(.color-level) .color-level {
   box-shadow: 0 0 0 2px var(--color-level-2);
 }
